tests/ast_interpreter/err_list_mutation_out_of_bounds.expected
<string>:3:5: error: list index out of bounds
    list[10] = 99;
    ^^^^^^^^
